--- a/build.xml
+++ b/build.xml
@@ -29,7 +29,7 @@
         </exec>
     </target>
 
-    <target name="full-build" depends="prepare,composer,-check-failure"
+    <target name="full-build" depends="prepare,composer"
             description="Perform static analysis, run tests, and generate project documentation.">
         <echo message="Built"/>
     </target>
